--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,8 @@ p {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 250px;
+    height: 150px;
     background-color: #F1FAEE;
     margin: 30px 120px;
     border: 4px solid #457B9D;
