--- a/styles.css
+++ b/styles.css
@@ -107,10 +107,10 @@ p {
     width: 250px;
     height: 150px;
     background-color: #F1FAEE;
-    margin: 30px 120px;
+    margin: 40px 130px;
     border: 4px solid #457B9D;
     border-radius: 10px;
-    padding: 8px 0 8px 10px;
+    padding: 8px 5px 8px 10px;
 }
 
 #img4 {
