--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ p {
     width: 250px;
     height: 150px;
     background-color: #F1FAEE;
-    margin: 40px 130px;
+    margin: 40px auto;
     border: 4px solid #457B9D;
     border-radius: 10px;
     padding: 8px 5px 8px 10px;
