--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ img {
     flex-direction: column;
     align-items: center;
     background-image: url(images/unionbuildings.jpeg);
-    background-size: cover;
+    background-size: 100vw 100vh;
     border-top: 1px solid whitesmoke;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
