--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ img {
     background-color: #A8DADC;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    margin-bottom: 200px;
 }
 
 .hero {
